force-app/main/default/objects/Staffing_Skill_Match__c/Staffing_Skill_Match__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus><description>Persisted, explainable candidate-to-skill evidence used for a staffing decision.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing>
<label>Staffing Skill Match</label><nameField><displayFormat>SSM-{00000}</displayFormat><label>Match Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField><pluralLabel>Staffing Skill Matches</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility>
</CustomObject>