force-app/main/default/objects/Staffing_Skill_Match__c/fields/Candidate_Level__c.field-meta.xml
<CustomField><fullName>Candidate_Level__c</fullName><label>Candidate Level</label><precision>1</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>