force-app/main/default/objects/Staffing_Skill_Match__c/fields/Capability__c.field-meta.xml
<CustomField><fullName>Capability__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Capability</label><referenceTo>Capability__c</referenceTo><relationshipLabel>Staffing Match Evidence</relationshipLabel><relationshipName>Staffing_Match_Evidence</relationshipName><required>true</required><type>Lookup</type></CustomField>