force-app/main/default/objects/Staffing_Skill_Match__c/fields/Eligible__c.field-meta.xml
<CustomField><fullName>Eligible__c</fullName><defaultValue>false</defaultValue><label>Eligible</label><type>Checkbox</type></CustomField>