force-app/main/default/objects/Staffing_Skill_Match__c/fields/Evaluated_At__c.field-meta.xml
<CustomField><fullName>Evaluated_At__c</fullName><label>Evaluated At</label><required>true</required><type>DateTime</type></CustomField>