force-app/main/default/objects/Staffing_Skill_Match__c/fields/Evidence_Summary__c.field-meta.xml
<CustomField><fullName>Evidence_Summary__c</fullName><label>Evidence Summary</label><length>32768</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>