force-app/main/default/objects/Staffing_Skill_Match__c/fields/Gap_Reason__c.field-meta.xml
<CustomField><fullName>Gap_Reason__c</fullName><label>Gap Reason</label><length>32768</length><visibleLines>3</visibleLines><type>LongTextArea</type></CustomField>