force-app/main/default/objects/Staffing_Skill_Match__c/fields/Match_Key__c.field-meta.xml
<CustomField><fullName>Match_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Match Key</label><length>100</length><required>true</required><type>Text</type><unique>true</unique></CustomField>