force-app/main/default/objects/Staffing_Skill_Match__c/fields/Policy_Version__c.field-meta.xml
<CustomField><fullName>Policy_Version__c</fullName><label>Policy Version</label><length>80</length><required>true</required><type>Text</type></CustomField>