force-app/main/default/objects/Staffing_Skill_Match__c/fields/Requirement__c.field-meta.xml
<CustomField><fullName>Requirement__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Engagement Skill Requirement</label><referenceTo>Engagement_Skill_Requirement__c</referenceTo><relationshipLabel>Staffing Matches</relationshipLabel><relationshipName>Staffing_Matches</relationshipName><required>true</required><type>Lookup</type></CustomField>