force-app/main/default/objects/Staffing_Skill_Match__c/fields/Resource__c.field-meta.xml
<CustomField><fullName>Resource__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Staffing Skill Matches</relationshipLabel><relationshipName>Staffing_Skill_Matches</relationshipName><required>true</required><type>Lookup</type></CustomField>