force-app/main/default/objects/Staffing_Skill_Match__c/fields/Score__c.field-meta.xml
<CustomField><fullName>Score__c</fullName><label>Weighted Score</label><precision>5</precision><required>true</required><scale>2</scale><type>Number</type></CustomField>