force-app/main/default/objects/Staffing_Skill_Match__c/fields/Staffing_Request__c.field-meta.xml
<CustomField><fullName>Staffing_Request__c</fullName><label>Staffing Request</label><referenceTo>Staffing_Request__c</referenceTo><relationshipLabel>Skill Matches</relationshipLabel><relationshipName>Skill_Matches</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>