force-app/main/default/objects/Staffing_Skill_Match__c/validationRules/Match_Valid_Score.validationRule-meta.xml
<ValidationRule><fullName>Match_Valid_Score</fullName><active>true</active><errorConditionFormula>OR(Candidate_Level__c &lt; 0, Candidate_Level__c &gt; 4, Score__c &lt; 0, Score__c &gt; 100)</errorConditionFormula><errorMessage>Candidate level must be 0 to 4 and weighted score must be 0 to 100.</errorMessage></ValidationRule>